[gd_scene load_steps=14 format=1]

[ext_resource path="res://Asset/sounds/bowserfall.wav" type="Sample" id=1]
[ext_resource path="res://Asset/images/bowser0.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Bowser.gd" type="Script" id=3]
[ext_resource path="res://Asset/fonts/UbuntuMono.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Scripts/HelloWorldLabel.gd" type="Script" id=5]
[ext_resource path="res://Asset/sounds/stardust.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scripts/Ferambie.gd" type="Script" id=7]
[ext_resource path="res://Themes/VBoxContainerTheme.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/VBoxContainer.gd" type="Script" id=9]
[ext_resource path="res://Scripts/GuessSwitch.gd" type="Script" id=10]
[ext_resource path="res://Scripts/PhysicsCollisionButtonSwitch.gd" type="Script" id=11]
[ext_resource path="res://Scripts/TilemapSwitch.gd" type="Script" id=12]

[sub_resource type="SampleLibrary" id=1]

samples/bowserfall = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 1 )
}

[node name="FirstScene" type="Node"]

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 1.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Button" type="Button" parent="SamplePlayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 150.0
margin/right = 290.0
margin/bottom = 170.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 310, 260 )
texture = ExtResource( 2 )
script/script = ExtResource( 3 )

[node name="HelloWorldLabel" type="RichTextLabel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 480.0
margin/bottom = 130.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
script/script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="HelloWorldLabel"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500
script/script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 450.0
margin/top = 190.0
margin/right = 558.0
margin/bottom = 390.0
alignment = 0
script/script = ExtResource( 9 )

[node name="NewGame" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 0.0
margin/right = 108.0
margin/bottom = 27.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "NewGame"
flat = false

[node name="Load" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 31.0
margin/right = 108.0
margin/bottom = 58.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="Quit" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 62.0
margin/right = 108.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="Settings" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 93.0
margin/right = 108.0
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false

[node name="Guess" type="MenuButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 124.0
margin/right = 108.0
margin/bottom = 151.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Guess"
flat = true
items = [  ]
script/script = ExtResource( 10 )

[node name="SceneSwitch" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 40.0
margin/top = 260.0
margin/right = 148.0
margin/bottom = 460.0
alignment = 0
script/script = ExtResource( 9 )

[node name="PhysicsCollision" type="Button" parent="SceneSwitch"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 0.0
margin/right = 108.0
margin/bottom = 27.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Physics"
flat = false
script/script = ExtResource( 11 )

[node name="Load" type="Button" parent="SceneSwitch"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 0.0
margin/top = 31.0
margin/right = 108.0
margin/bottom = 58.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tilemap"
flat = false
script/script = ExtResource( 12 )

[connection signal="button_down" from="SamplePlayer/Button" to="Sprite" method="_on_Button_button_down"]

[connection signal="timeout" from="HelloWorldLabel/Timer" to="Sprite" method="_on_Timer_timeout"]

[connection signal="timeout" from="HelloWorldLabel/Timer" to="HelloWorldLabel" method="_on_Timer_timeout"]

[connection signal="pressed" from="VBoxContainer/NewGame" to="VBoxContainer" method="_on_NewGame_pressed"]

[connection signal="pressed" from="VBoxContainer/Load" to="VBoxContainer" method="_on_Load_pressed"]

[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_Quit_pressed"]

[connection signal="pressed" from="VBoxContainer/Settings" to="VBoxContainer" method="_on_Settings_pressed"]


